2002-09-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_reader.cpp:
	* libutil++/child_reader.h: fix for child terminated by a signal
	* gui/oprof_start_util.cpp:
	* pp/op_to_source.cpp: use the the new child_reader interface

2002-09-11  John Levon  <levon@movementarian.org>

	* acinclude.m4:
	* configure.in:
	* gui/Makefile.in: replace with new Qt configure script
 
2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>

	* acinclude.m4: fix qt3 detection in some corner case.

2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/samples_container.cpp:
	* pp/samples_container.h: Check at run time we don't try to use an
	  unitialized samples_container_t.

2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_time.cpp: exit sooner when no samples files are available.

2002-09-09  Will Cohen  <wcohen@redhat.com>

	* dae/opd_kernel.c (struct opd_module): 
	  (kernel_start, kernel_end):
	  (opd_parse_kernel_range):
	  (opd_drop_module_sample):
	  (opd_find_module_by_eip):
	  (opd_handle_module_sample):
	  (opd_handle_kernel_sample):
	  (opd_eip_is_kernel):
	* dae/opd_kernel.h (opd_handle_kernel_sample):
	  (opd_eip_is_kernel):
	* dae/opd_mapping.c (opd_put_mapping):
	* dae/opd_mapping.h (struct opd_map):
	  (opd_is_in_map):
	  (opd_map_offset):
	* dae/opd_parse_proc.c (opd_add_ascii_map):
	* dae/opd_proc.c(verb_show_sample):
	  (opd_put_image_sample):
	* dae/opd_proc.h (opd_put_image_sample): Change things referring
	  to addresses to unsigned long for operation on 64-bit machines.
 
2002-09-07  Philippe Elie  <phil.el@wanadoo.fr>

	* all source file : remove email address from @author

2002-09-05  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_interface.h: (op_sample, op_note): Make compatible with
	  64-bit targets.
	* dae/opd_proc.c: (opd_put_sample): Adjust verbprintf arguments.
	  (opd_handle_fork): Ditto.
	* dae/oprofiled.c: (opd_do_samples): Ditto.

2002-09-04    Will Cohen  <wcohen@redhat.com>

	* module/op_rtc.c: move to ...