@@ -1,3 +1,7 @@
+2002-09-12  John Levon  <levon@movementarian.org>
+
+	* acinclude.m4: fix moc2/moc conflict, cache val
+ 
 2002-09-12  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/child_reader.cpp:
